# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.cache/nitpick/: merged-style.toml
angpanda_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: cli.py  engine.py  even_game.py
brain_games/games/: calc.py  calc_game.py  even.py  even_game.py  gcd.py  gcd_game.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
